[package]
name = "elliptic-curves-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", features = ["std"] }
ark-ff-macros = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-std = { version = "0.5.0", features = ["std"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8.5"
sha2 = "0.10.9"
thiserror = "2.0.12"
